# HPC-workload-optimizer

./: .coveragerc  .zenodo.json  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  ROADMAP.md  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yaml  release.yaml
configs/release/: production_readiness.yaml
docs/: 07-interfaces-cli-and-api.md  dashboard.html  leaderboard.md  plugin-api.md  production-evidence.md
docs/tutorials/: benchmark-suite.md  installation.md  quickstart.md
docs/validation/: batsim-agreement.md
examples/: whatif_demo.py
paper/: artifact_appendix.md  hpcopt_paper.md
python/hpcopt/cli/: ingest.py  main.py  simulate.py  whatif.py
python/hpcopt/ingest/: fdata.py  pm100.py
python/hpcopt/plugins/: __init__.py  uarp.py
python/hpcopt/recommend/: engine.py
python/hpcopt/rl/: env.py
python/hpcopt/simulate/: core.py  core_helpers.py  rust_bridge.py
python/hpcopt/whatif/: __init__.py  engine.py
rust/sim-runner/src/: main.rs
schemas/: engineering_kpi_dashboard.schema.json
scripts/: build_leaderboard.py  fdata_scale_study.py  pm100_cap_pareto.py  pm100_multiresource_study.py  policy_matrix.py  train_rl_policy.py
tests/unit/: test_ingest_fdata.py  test_ingest_pm100.py  test_plugins.py  test_recommend_engine.py  test_rl_trained_fallback.py  test_simulation_properties.py  test_whatif.py
