[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hpc-workload-optimizer"
version = "2.3.0"
description = "Systems-first HPC workload optimizer: runtime prediction, scheduling simulation, and policy recommendation."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
  { name = "Eren Ari", email = "erenari27@gmail.com" }
]
keywords = ["hpc", "scheduling", "workload", "optimizer", "simulation", "backfill", "quantile-regression"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: System :: Clustering",
  "Typing :: Typed",
]

dependencies = [
  "typer>=0.12.3,<1.0",
  "pydantic>=2.8.2,<3.0",
  "pandas>=2.2.2,<3.0",
  "pyarrow>=16.1.0,<18.0",
  "pyyaml>=6.0.1,<7.0",
  "fastapi>=0.112.0,<1.0",
  "uvicorn>=0.30.0,<1.0",
  "scikit-learn>=1.5.0,<2.0",
  "joblib>=1.4.0,<2.0"
]

[project.urls]
Homepage = "https://github.com/ErenAri/HPC-workload-optimizer"
Repository = "https://github.com/ErenAri/HPC-workload-optimizer"
Documentation = "https://github.com/ErenAri/HPC-workload-optimizer#readme"
Issues = "https://github.com/ErenAri/HPC-workload-optimizer/issues"
Changelog = "https://github.com/ErenAri/HPC-workload-optimizer/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2,<9.0",
  "pytest-cov>=5.0.0,<6.0",
  "hypothesis>=6.100,<7.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
  "httpx>=0.27.0",
  "bandit>=1.7.9,<2.0",
  "jsonschema>=4.20.0,<5.0",
  "types-PyYAML>=6.0.12.20250915"
]
analysis = [
  "shap>=0.44",
  "optuna>=3.6"
]
production = [
  "prometheus-client>=0.20.0,<1.0",
  "jsonschema>=4.20.0,<5.0"
]
tracing = [
  "opentelemetry-api>=1.25.0,<2.0",
  "opentelemetry-sdk>=1.25.0,<2.0",
  "opentelemetry-instrumentation-fastapi>=0.46b0"
]
lightgbm = [
  "lightgbm>=4.3.0,<5.0"
]
rl = [
  "gymnasium>=0.29.0,<2.0",
  "torch>=2.1.0,<3.0",
  "stable-baselines3>=2.3.0,<3.0",
  "sb3-contrib>=2.3.0,<3.0"
]

[project.scripts]
hpcopt = "hpcopt.cli.main:run"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
"" = "python"

[tool.setuptools.packages.find]
where = ["python"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "integration: integration tests",
  "load: load/performance tests",
  "performance: marks performance-sensitive tests",
]
filterwarnings = [
  "ignore:X does not have valid feature names, but LGBMRegressor was fitted with feature names:UserWarning",
  "ignore:X does not have valid feature names, but LGBMClassifier was fitted with feature names:UserWarning",
  "ignore:pkg_resources is deprecated as an API.*:UserWarning",
  "ignore:module 'sre_constants' is deprecated:DeprecationWarning",
  "error",
]

[tool.bandit]
skips = ["B101"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
  "shap.*",
  "optuna.*",
  "joblib.*",
  "pyarrow.*",
  "uvicorn.*",
  "prometheus_client.*",
  "opentelemetry.*",
  "jsonschema.*",
]
ignore_missing_imports = true
